k8s/theia/yaml/session-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-12-09T04:24:43Z"
  generation: 1
  labels:
    app: theia
    app.kubernetes.io/component: session
    app.kubernetes.io/part-of: theia-cloud
    session-name: demo-session-henkan-env
    theia-cloud.io/app-definition: sample-app
    theia-cloud.io/session: demo-session-henkan-env
    theia-cloud.io/session-uid: 7429dc07-4309-4b19-9b10-64fd7ae8b65f
    theia-cloud.io/session-uuid: 7429dc07-4309-4b19-9b10-64fd7ae8b65f
    theia-cloud.io/user: bartu
  name: theia-demo-session-henkan-env
  namespace: default
  ownerReferences:
    - apiVersion: example.suleyman.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Session
      name: demo-session-henkan-env
      uid: 7429dc07-4309-4b19-9b10-64fd7ae8b65f
  resourceVersion: "1275650"
  uid: 91830b34-8829-4aa0-a8df-5e3d624dcbd4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: theia
      session-name: demo-session-henkan-env
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: theia
        app.kubernetes.io/component: session
        app.kubernetes.io/part-of: theia-cloud
        session-name: demo-session-henkan-env
        theia-cloud.io/app-definition: sample-app
        theia-cloud.io/session: demo-session-henkan-env
        theia-cloud.io/session-uid: 7429dc07-4309-4b19-9b10-64fd7ae8b65f
        theia-cloud.io/session-uuid: 7429dc07-4309-4b19-9b10-64fd7ae8b65f
        theia-cloud.io/user: bartu
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: THEIACLOUD_APP_ID
              value: "101"
            - name: THEIACLOUD_SERVICE_URL
              value: http://theia-demo-session-henkan-env:3000
            - name: THEIACLOUD_SESSION_UID
              value: 7429dc07-4309-4b19-9b10-64fd7ae8b65f
            - name: THEIACLOUD_SESSION_NAME
              value: demo-session-henkan-env
            - name: THEIACLOUD_SESSION_USER
              value: bartu
            - name: THEIACLOUD_SESSION_URL
              value: http://theia.localtest.me/7429dc07-4309-4b19-9b10-64fd7ae8b65f/
            - name: THEIACLOUD_SESSION_SECRET
              value: super-secret-999
            - name: THEIACLOUD_MONITOR_PORT
              value: "9000"
            - name: THEIACLOUD_MONITOR_ENABLE_ACTIVITY_TRACKER
              value: "true"
            - name: THEIACLOUD_MONITOR_TIMEOUT_AFTER
              value: "1800"
            - name: THEIACLOUD_MONITOR_NOTIFY_AFTER
              value: "600"
            - name: COMMIT_GENAI_ENDPOINT
              value: https://henkan-genai.example/webhook/123
            - name: EMAIL
              value: bartu@example.com
            - name: GIT_AUTHOR_NAME
              value: bartu
            - name: GIT_SSL_NO_VERIFY
              value: "true"
            - name: HENKAN_GIT_EMAIL
              value: bartu@example.com
            - name: HENKAN_GIT_USER
              value: bartu
            - name: HENKAN_META_API_URL
              value: http://henkan-metaapi.henkan-metaapi
            - name: HENKAN_PROJECT_GIT_URL
              value: https://github.com/GlobalMaksimum/henkan-etl-flow-project.git
            - name: HENKAN_PROJECT_NAME
              value: busra
          image: ghcr.io/eclipse-theia/theia-blueprint/theia-ide:latest
          imagePullPolicy: IfNotPresent
          name: theia
          ports:
            - containerPort: 3000
              name: application
              protocol: TCP
            - containerPort: 9000
              name: monitor
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          securityContext:
            runAsGroup: 101
            runAsUser: 101
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /home/project
              name: workspace
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 101
      terminationGracePeriodSeconds: 30
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: workspace-demo-ws
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2025-12-09T04:24:44Z"
      lastUpdateTime: "2025-12-09T04:24:44Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-12-09T04:24:43Z"
      lastUpdateTime: "2025-12-09T04:24:44Z"
      message: ReplicaSet "theia-demo-session-henkan-env-6cc9b88f78" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
