k8s/theia/yaml/session-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-12-17T13:42:10Z"
  labels:
    app: bartu-demo-ws-5cfdce35-b1bf-4b21-8b43-99c7fe6ad5d1
    app.kubernetes.io/component: session
    app.kubernetes.io/part-of: theia-cloud
    theia-cloud.io/app-definition: sample-app
    theia-cloud.io/session: bartu-demo-ws
    theia-cloud.io/user: bartu
  name: theia-bartu-demo-ws
  namespace: default
  ownerReferences:
    - apiVersion: example.suleyman.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Session
      name: bartu-demo-ws
      uid: 5cfdce35-b1bf-4b21-8b43-99c7fe6ad5d1
  resourceVersion: "1883119"
  uid: 1141b15d-742d-4eb7-b8de-132656b3dafd
spec:
  clusterIP: 10.103.106.60
  clusterIPs:
    - 10.103.106.60
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: web
  selector:
    app: bartu-demo-ws-5cfdce35-b1bf-4b21-8b43-99c7fe6ad5d1
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
